3. Slightly blur-behind popup messages.
4. Add 'Newest' to album sorts.
5. Add, server-side, option to use smaller grid if icon only and narrow width.
6. Adjust display of track numbers in browse view.
7. Allow loading of 'pinned' weblink/iframe items from custom actions.
8. Add option to show horizontally scollable list of new, recently played, and
   most played albums on home screen.

5.11.4
------
1. Fix listing random mixes on macOS - thanks to EelcoV.

5.11.3
------
1. Add 'Play shuffled' for remote playlists.
2. Fix disabling of playlist images.
3. Add emblem for 'iBroadcast'.
4. Fix/work-around issues with using Default for server-settings when LMS is
   on piCorePlayer.

5.11.2
------
1. Update icon mapping for 'LyrPlay' due to its 'Model' change.
2. Fix scan progress page when opening from 'Information' dialog.
3. Fix update details page.
4. Show track ratings in playlists.

5.11.1
------
1. Improve accuracy of list 'Scroll to'.
2. Remove 'Del' shortcut, as its breaking A-Z jumplist.
3. Use 'apple' icon for 'LyrPlay'.
4. Fix/work-around issues with using Default for server-settings and having
   custom actions.

5.11.0
------
 1. Add support for extended meta-data in SlimBrowse commands.
 2. Move 'Sleep all' and 'Create group player' into menu of 'Manager players'
    dialog.
 3. Add 'Clear queue', 'Switch off', and 'Switch on' for all players in menu
    of 'Manager players' dialog.
 4. If using playlist images, then add an overlay icon top-left for favourited
    playlists.
 5. Enable playlist images by default.
 6. Default to grid view.
 7. Re-add notification support, removed in 4.0.0, as used by some plugins.
 8. Click on MAI header to show a 'Scroll to' dialog allowing to scroll to
    specific sections.
 9. For touch devices clicking on MAI header always shows 'Scroll to' dialog
    instead of scrolling to artist under touch.
10. Change dialog re-position minimum size to 600x600px.