@@ -35,33 +35,33 @@ function buildSearchResp(results) {
         if (SEARCH_ARTISTS_CAT==results[i].command.cat) {
             filter = FILTER_PREFIX+"artist";
             items.push({title: i18n("Artists") + " ("+titleParam+")", id:filter, header:true, hidesub:true, svg:"artist",
-                        allItems: all, subtitle: i18np("1 Artist", "%1 Artists", numItems)});
+                        allItems: clamped ? all : undefined, subtitle: i18np("1 Artist", "%1 Artists", numItems)});
         } else if (SEARCH_ALBUMS_CAT==results[i].command.cat) {
             filter = FILTER_PREFIX+"album";
             items.push({title: (lmsOptions.supportReleaseTypes ? i18n("Releases") : i18n("Albums")) + " ("+titleParam+")",
                         id:filter, header:true, hidesub:true, svg: lmsOptions.supportReleaseTypes ? "release" : undefined,
                         icon: lmsOptions.supportReleaseTypes ? undefined : "album",
-                        allItems: all, subtitle:lmsOptions.supportReleaseTypes ? i18np("1 Release", "%1 Releases", numItems) : i18np("1 Album", "%1 Albums", numItems),
-                        menu:[PLAY_ALL_ACTION, INSERT_ALL_ACTION, ADD_ALL_ACTION]});
+                        allItems: clamped ? all : undefined, subtitle:lmsOptions.supportReleaseTypes ? i18np("1 Release", "%1 Releases", numItems) : i18np("1 Album", "%1 Albums", numItems),
+                        menu:queryParams.party || clamped ? undefined : [PLAY_ALL_ACTION, INSERT_ALL_ACTION, ADD_ALL_ACTION]});
         } else if (SEARCH_WORKS_CAT==results[i].command.cat) {
             if (numItems>0) {
                 filter = FILTER_PREFIX+"work";
                 items.push({title: i18n("Works") + " ("+titleParam+")",
                             id:filter, header:true, hidesub:true, svg: "classical-work",
-                            allItems: all, subtitle:i18np("1 Work", "%1 Works", numItems),
-                            menu:[PLAY_ALL_ACTION, INSERT_ALL_ACTION, ADD_ALL_ACTION]});
+                            allItems: clamped ? all : undefined, subtitle:i18np("1 Work", "%1 Works", numItems),
+                            menu:queryParams.party || clamped ? undefined : [PLAY_ALL_ACTION, INSERT_ALL_ACTION, ADD_ALL_ACTION]});
             }
         } else if (SEARCH_TRACKS_CAT==results[i].command.cat) {
             filter = FILTER_PREFIX+"track";
             items.push({title: i18n("Tracks", titleParam) + " ("+titleParam+")", id:filter, header:true, hidesub:true,
-                        allItems: all, subtitle: i18np("1 Track", "%1 Tracks", numItems),
+                        allItems: clamped ? all : undefined, subtitle: i18np("1 Track", "%1 Tracks", numItems),
                         icon: "music_note",
-                        menu:queryParams.party ? [] : [PLAY_ALL_ACTION, INSERT_ALL_ACTION, ADD_ALL_ACTION]});
+                        menu:queryParams.party || clamped ? undefined : [PLAY_ALL_ACTION, INSERT_ALL_ACTION, ADD_ALL_ACTION]});
         } else if (SEARCH_PLAYLISTS_CAT==results[i].command.cat) {
             filter = FILTER_PREFIX+"playlist";
             items.push({title: i18n("Playlists") + " ("+titleParam+")", id:filter, header:true, hidesub:true, icon:"list",
-                        allItems: all, subtitle: i18np("1 Playlist", "%1 Playlists", numItems),
-                        menu:[PLAY_ALL_ACTION, INSERT_ALL_ACTION, ADD_ALL_ACTION]});
+                        allItems: clamped ? all : undefined, subtitle: i18np("1 Playlist", "%1 Playlists", numItems),
+                        menu:queryParams.party || clamped ? undefined : [PLAY_ALL_ACTION, INSERT_ALL_ACTION, ADD_ALL_ACTION]});
         } else if (SEARCH_OTHER_CAT==results[i].command.cat) {
             items.push({title: i18n("Search on..."), id:"search.other", header:true, icon:"search"});
         }
